--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <script src="https://maps.api.2gis.ru/2.0/loader.js?pkg=full"></script>
     
     <title>Vite + Vue</title>
+    <script src="https://maps.api.2gis.ru/2.0/loader.js?pkg=full"></script>
   </head>
   <body>
     <div id="app"></div>
